--- a/style2.css
+++ b/style2.css
@@ -318,15 +318,18 @@ h3 {
 }
 
 .about img {
-  height: auto;
-  width: 430px;
+  width: 100%; 
+  max-width: 430px; 
+  height: auto; 
   border-radius: 30px;
   box-shadow: rgba(26, 24, 24, 0.25) 0px 5px 10px 2px;
   animation: pulse 5s infinite ease-in-out;
 }
 
 .about-text {
-  width: 550px;
+  width: 100%; 
+  max-width: 550px; 
+  padding: 0 15px; 
 }
 
 @keyframes pulse {
@@ -341,7 +344,8 @@ h3 {
 /* about container */
 
 .main {
-  width: 1130px;
+  max-width: 1130px; 
+  width: 100%; 
   margin: 0 auto;
   display: flex;
   align-items: center;
